--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TOKEN = '8560191632:AAG-v2QoUys62xYgbhLW2bMnI7nmEZlJTHM'
 ADMIN_CHAT_ID = "-1003448250131"
-DB_PATH="./data/shop.db"
+DB_PATH="/app/data/shop.db"
